force-app/main/default/objects/Payment__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>