force-app/main/default/objects/Payment__c/fields/Customer_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Id__c</fullName>
    <label>Customer Payment Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>